--- a/Src/styles.css
+++ b/Src/styles.css
@@ -2,13 +2,18 @@ body {
     width: 100%;
     height: 100vh;
     margin: 0;
-    background-color: #303030;
+    background-color: #262626;
     color: #DFDFDF;
     font-family: Tahoma;
     font-size: 16px;
-    background-image: url(../Assets/animalFlat.png);
   }
-  
+
+  .backgroundImageDiv {
+    background-image: url(../Assets/animalFlat.png);
+    background-position: top;
+    background-repeat: no-repeat;
+  }
+
   p {
     text-align: start;
   }
@@ -88,6 +93,8 @@ body {
     justify-content: flex-end;
     align-items: center;
     padding: 0 16px;
+    position: sticky;
+    top: 0;
   }
 
   .english, .spanish {
@@ -99,7 +106,7 @@ body {
   }
 
   .english:hover, .spanish:hover {
-    color: #fff;
+    color: #FFF;
   }
 
   .imgSvg {
