--- a/Src/styles.css
+++ b/Src/styles.css
@@ -1,116 +1,139 @@
 body {
-    width: 100%;
-    height: 100vh;
-    margin: 0;
-    background-color: #262626;
-    color: #DFDFDF;
-    font-family: Tahoma;
-    font-size: 16px;
-  }
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  background-color: #262626;
+  color: #DFDFDF;
+  font-family: Tahoma;
+  font-size: 16px;
+}
 
-  .backgroundImageDiv {
-    background-image: url(../Assets/animalFlat.png);
-    background-position: top;
-    background-repeat: no-repeat;
-  }
+.backgroundImageDiv {
+  background-image: url(../Assets/animalFlat.png);
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  margin: 0;
+}
 
-  p {
-    text-align: start;
-  }
+p {
+  text-align: center;
+  padding-bottom: 2rem;
 
-  h1 {
-    text-align: center;
-  }
+}
 
-  h1, p {
-    margin: 1em auto; 
-    width: 60vw;
-    max-width: 500px;
-    min-width: 300px;
-  }
-  
-  form {
-    width: 60vw;
-    max-width: 500px;
-    min-width: 300px;
-    margin: 0 auto;
-    padding-bottom: 2em;
-    background-color: #2F3061;
-    border-radius:8px;
-  }
-  
-  fieldset {
-    border: none;
-    padding: 2rem 1rem;
-    border-bottom: 3px solid #5F5980;
-  }
-  
-  fieldset:last-of-type {
-    border-bottom: none;
-  }
-  
-  label {
-    display: block;
-    margin: 0.5rem 0;
-  }
-  
-  input,
-  textarea,
-  select {
-    margin: 10px 0 0 0;
-    width: 100%;
-    min-height: 2em;
-    border-radius:8px;
-    padding: 0 0 0 8px;
-  }
-  
-  input, textarea {
-    background-color: #303030;
-    border: 1px solid #343434;
-    color: #DFDFDF;
-  }
-  
-  .inline {
-    width: unset;
-    margin: 0 0.5em 0 0;
-    vertical-align: middle;
-  }
-  
-  input[type="submit"] {
-    display: block;
-    width: 60%;
-    margin: 1em auto;
-    height: 2em;
-    font-size: 1.1rem;
-    background-color: #5F5980;
-    border-color: #DFDFDF;
-    min-width: 300px;
-  }
+h1 {
+  text-align: center;
+}
 
-  .language {
-    height: 48px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    padding: 0 16px;
-    position: sticky;
-    top: 0;
-  }
+h1,
+p {
+  margin: 0 auto;
+  padding-top: 2rem;
+  width: 60vw;
+  max-width: 500px;
+  min-width: 300px;
+}
 
-  .english, .spanish {
-    font-size: 16px;
-    text-decoration: none;
-    color: #DFDFDF; 
-    font-weight: 300;
-    margin: 0 8px;
-  }
+form {
+  width: 60vw;
+  max-width: 500px;
+  min-width: 300px;
+  margin: 0 auto;
+  padding-bottom: 2em;
+  background-color: #2F3061;
+  border-radius: 8px;
+}
 
-  .english:hover, .spanish:hover {
-    color: #FFF;
-  }
+fieldset {
+  border: none;
+  padding: 2rem 1rem;
+  border-bottom: 3px solid #5F5980;
+}
 
-  .imgSvg {
-    padding: 0 8px;
-    width: 24px;
-    height: 24px;
-  }
+fieldset:last-of-type {
+  border-bottom: none;
+}
+
+fieldset:first-of-type {
+  border-top: 3px solid #5F5980;
+}
+
+label {
+  display: block;
+  margin: 0.5rem 0;
+}
+
+input,
+textarea,
+select {
+  margin: 10px 0 0 0;
+  width: 100%;
+  min-height: 2em;
+  border-radius: 8px;
+  padding: 0 0 0 8px;
+}
+
+input,
+textarea {
+  background-color: #303030;
+  border: 1px solid #343434;
+  color: #DFDFDF;
+  box-sizing: border-box;
+}
+
+textarea {
+  resize: vertical;
+}
+
+.inline {
+  width: unset;
+  margin: 0 0.5em 0 0;
+  vertical-align: middle;
+}
+
+input[type="submit"] {
+  display: block;
+  width: 60%;
+  margin: 1em auto;
+  height: 2em;
+  font-size: 1.1rem;
+  background-color: #5F5980;
+  border-color: #DFDFDF;
+  min-width: 300px;
+}
+
+input[type="submit"]:hover {
+  border-width: 2px;
+}
+
+.language {
+  height: 48px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 0 16px;
+  position: sticky;
+  top: 0;
+}
+
+.english,
+.spanish {
+  font-size: 16px;
+  text-decoration: none;
+  color: #DFDFDF;
+  font-weight: 300;
+  margin: 0 8px;
+}
+
+.english:hover,
+.spanish:hover {
+  color: #FFF;
+  scale: 1.3;
+}
+
+.imgSvg {
+  padding: 0 8px;
+  width: 24px;
+  height: 24px;
+}
